--- a/src/track.css
+++ b/src/track.css
@@ -1,3 +1,11 @@
 .ma{
     margin-top: 8%;
 }
+
+.hw{
+    
+    font-family: "Poppin";
+    color: wheat;
+    font-weight: bold;
+    font-style: inherit;
+}
